Update huawei-K4203-api.yml (#2)
Included option to reboot modem using reboot_k4203

--- a/huawei-K4203-api.yml
+++ b/huawei-K4203-api.yml
@@ -87,6 +87,12 @@ connect:
     request: !!omap
         - Action: 1
 
+reboot_k4203:
+    url: /api/device/control
+    method: post
+    request: !!omap
+        - Action: 1
+        
 profile:
     url: /api/dialup/profiles
     Referer: /html/home.htm
